<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_bg"
    android:gravity="center"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sectionSpeedometer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/infoLayout"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/speedometer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:indeterminateOnly="false"
            android:max="70"
            android:progress="0"
            android:progressDrawable="@drawable/circular_progress"
            tools:layout_editor_absoluteX="186dp"
            tools:layout_editor_absoluteY="-60dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/speedometer"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textCurrentSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/gray_200" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/km_h"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/gray_200" />

            <TextView
                android:id="@+id/textSpeedAccuracy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="?attr/colorSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/speed_accuracy"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?attr/colorSecondary" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/infoLayout"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/section_bg"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:background="?attr/colorSecondaryVariant"
                    android:clickable="true"
                    android:padding="20dp"
                    android:src="@drawable/ic_baseline_speed" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/blueBayoux" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/distance_travelled"
                        android:textColor="@color/gray_200" />

                    <TextView
                        android:id="@+id/textDistanceTravelled"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/teal_200"
                        android:textSize="40sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/section_bg"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/altitude"
                        android:textColor="@color/gray_200" />

                    <TextView
                        android:id="@+id/textAltitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="?attr/colorSecondary"
                        android:textSize="40sp" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/blueBayoux" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/accuracy_meters"
                        android:textColor="@color/gray_200" />

                    <TextView
                        android:id="@+id/textAltitudeAccuracy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/teal_200"
                        android:textSize="40sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/gray_200" />

                <TextView
                    android:id="@+id/textLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/gray_200" />
            </LinearLayout>

            <!--            <TextView-->
            <!--                android:id="@+id/textLastUpdated"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="20dp"-->
            <!--                android:textColor="@color/gray_200" />-->

        </LinearLayout>
    </ScrollView>

    <!--        <Button-->
    <!--            android:id="@+id/buttonLocation"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_gravity="center_horizontal"-->
    <!--            android:layout_height="55dp"-->
    <!--            android:text="Get Location"-->
    <!--            android:textAllCaps="true"-->
    <!--            android:backgroundTint="@color/teal_700"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>